--- a/Bio373_2020_RNAseq_analysis2.ipynb
+++ b/Bio373_2020_RNAseq_analysis2.ipynb
@@ -1041,7 +1041,7 @@
     "<div align=\"center\">\n",
     "  <img src=\"https://raw.githubusercontent.com/masaomi/Bio373_2020/master/png/standardization.png\" width=\"800px\">\n",
     "\n",
-    "\n",
+    "</div>\n",
     "where $x$ is the original feature vector, and $\\sigma$  is the standard deviation."
    ]
   },
