--- a/Bio373_2020_RNAseq_analysis2.ipynb
+++ b/Bio373_2020_RNAseq_analysis2.ipynb
@@ -1040,8 +1040,8 @@
     "\n",
     "<div align=\"center\">\n",
     "  <img src=\"https://raw.githubusercontent.com/masaomi/Bio373_2020/master/png/standardization.png\" width=\"800px\">\n",
-    "\n",
     "</div>\n",
+    "\n",
     "where $x$ is the original feature vector, and $\\sigma$  is the standard deviation."
    ]
   },
@@ -2638,7 +2638,7 @@
    "scroll": true,
    "slideNumber": "c/t",
    "theme": "serif",
-   "transition": "convex"
+   "transition": "zoom"
   }
  },
  "nbformat": 4,
